--- a/public/payroll.css
+++ b/public/payroll.css
@@ -232,7 +232,9 @@ table {
 }
 
 thead {
-  background: #2529c5;
+  background: #0D2A4B;
+  background-image: radial-gradient(circle at center, rgba(255, 255, 255, 0.08) 1px, transparent 2px);
+  background-size: 20px 20px;
   color: white;
   font-size: 15px;
 }
