--- a/public/employees.css
+++ b/public/employees.css
@@ -187,6 +187,30 @@ html, body {
 /* Employees Page */
 
 /* Search bar */
+
+.controls {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+  margin-bottom: 15px;
+}
+ .active-label {
+  background-color: #2196f3; 
+  color: white;
+  padding: 10px 16px;
+  text-align: center;
+  border-radius: 8px;
+  cursor: pointer;
+  width: fit-content;
+  transition: 0.3s;
+  margin: 10px 0;
+}
+
+.active-label:hover {
+  background-color: #1976d2;
+  transform: scale(1.05);
+}
 .search-bar {
   display: flex;
   justify-content: flex-end;
@@ -389,6 +413,20 @@ tbody td {
   padding: 30px;
 }
 
+/* Close Button */
+.modal-header .close {
+  color: white;
+  font-size: 26px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.2s ease;
+}
+
+.modal-header .close:hover {
+  color: #ffcccc;
+  transform: scale(1.1);
+}
+
 .form-group {
   display: flex;
   flex-direction: column;
@@ -546,7 +584,7 @@ tbody td {
   color: white;
   padding: 10px 16px;
   text-align: center;
-  border-radius: 8px;
+  border-radius: 6px;
   cursor: pointer;
   width: fit-content;
   transition: 0.3s;
@@ -555,23 +593,6 @@ tbody td {
 
 .resigned-label:hover {
   background-color: #b91c1c;
-  transform: scale(1.05);
-}
-
-  .active-label {
-  background-color: #2196f3; 
-  color: white;
-  padding: 10px 16px;
-  text-align: center;
-  border-radius: 8px;
-  cursor: pointer;
-  width: fit-content;
-  transition: 0.3s;
-  margin: 10px 0;
-}
-
-.active-label:hover {
-  background-color: #1976d2;
   transform: scale(1.05);
 }
 
