--- a/public/settings.css
+++ b/public/settings.css
@@ -523,3 +523,84 @@ label {
     padding: 15px;
   }
 }
+
+/* ===== MODAL NOTIFICATION ===== */
+.modal-logout{
+  display: none; /* Hidden by default */
+  position: fixed;
+  z-index: 999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.4);
+  justify-content: center;
+  align-items: center;
+  animation: fadeIn 0.3s ease;
+}
+
+.modal-content-logout {
+  background: white;
+  padding: 30px;
+  border-radius: 12px;
+  text-align: center;
+  width: 90%;
+  max-width: 400px;
+  box-shadow: 0px 6px 15px rgba(56, 43, 43, 0.2);
+  animation: popUp 0.3s ease;
+}
+
+.modal-content-logout h2{
+  color: #0D2A4B;
+  margin-bottom: 10px;
+}
+
+.modal-content-logout p{
+  color: #555;
+  font-size: 15px;
+  margin-bottom: 20px;
+}
+
+/* Close Button (X) */
+.close-btn-log {
+  cursor: pointer;
+  font-size: 22px;
+  color: white;
+  transition: color 0.2s ease;
+}
+
+.close-btn-log:hover {
+  color: #f87171; /* soft red hover */
+}
+
+/* Buttons */
+.modal-buttons-logout {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  padding: 15px 0 20px;
+}
+
+.confirm-btn {
+  background-color: #326FC5;
+  color: white;
+  padding: 8px 18px;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background 0.2s;
+}
+
+.confirm-btn:hover {
+  background-color: #285aa8;
+}
+
+.cancel-btn {
+  background-color: #bdc3c7;
+  color: #333;
+  padding: 8px 18px;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background 0.2s;
+}
